Updated Dashboard, Notes and Settings

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>CollegeBuddy</title>
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link rel="stylesheet" href="assets/libs/iconfonts/font-awesome/css/font-awesome.min.css" />
+		<link rel="shortcut icon" href="assets/img/icon.png" />
 	</head>
 	<body>
 		<section id="about">
