--- a/public/signup.html
+++ b/public/signup.html
@@ -11,7 +11,8 @@
 		<div class="container">
 			<h1 id="heading">CollegeBuddy</h1>
 			<form class="form" id="signup">
-				<input type="text" placeholder="Email ID" id="email" autofocus>
+				<input type="text" placeholder="Full Name" id="username" autofocus>
+				<input type="text" placeholder="Email ID" id="email">
 				<input type="password" placeholder="Password" id="password">
 				<input type="password" placeholder="Repeat Password" id="password2">
 				<button type="submit">Signup</button>
