Updated Dashboard and Lost&Found Pages

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -117,57 +117,17 @@
                 <div class="card-body">
                   <div class="clearfix">
                     <div class="float-left">
-                      <i class="mdi mdi-cube text-danger icon-lg"></i>
+                      <i class="mdi mdi-book text-danger icon-lg"></i>
                     </div>
                     <div class="float-right">
-                      <p class="mb-0 text-right">Total Revenue</p>
+                      <p class="mb-0 text-right">Total Notes Uploaded</p>
                       <div class="fluid-container">
-                        <h3 class="font-weight-medium text-right mb-0">$65,650</h3>
+                        <h3 class="font-weight-medium text-right mb-0">65</h3>
                       </div>
                     </div>
                   </div>
-                  <p class="text-muted mt-3 mb-0">
-                    <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i> 65% lower growth
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 grid-margin stretch-card">
-              <div class="card card-statistics">
-                <div class="card-body">
-                  <div class="clearfix">
-                    <div class="float-left">
-                      <i class="mdi mdi-receipt text-warning icon-lg"></i>
-                    </div>
-                    <div class="float-right">
-                      <p class="mb-0 text-right">Orders</p>
-                      <div class="fluid-container">
-                        <h3 class="font-weight-medium text-right mb-0">3455</h3>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="text-muted mt-3 mb-0">
-                    <i class="mdi mdi-bookmark-outline mr-1" aria-hidden="true"></i> Product-wise sales
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 grid-margin stretch-card">
-              <div class="card card-statistics">
-                <div class="card-body">
-                  <div class="clearfix">
-                    <div class="float-left">
-                      <i class="mdi mdi-poll-box text-success icon-lg"></i>
-                    </div>
-                    <div class="float-right">
-                      <p class="mb-0 text-right">Sales</p>
-                      <div class="fluid-container">
-                        <h3 class="font-weight-medium text-right mb-0">5693</h3>
-                      </div>
-                    </div>
-                  </div>
-                  <p class="text-muted mt-3 mb-0">
-                    <i class="mdi mdi-calendar mr-1" aria-hidden="true"></i> Weekly Sales
+                  <p class="text-muted mt-3 mb-0 text-center">
+                    <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i> 15% uploads this week
                   </p>
                 </div>
               </div>
@@ -180,37 +140,77 @@
                       <i class="mdi mdi-account-location text-info icon-lg"></i>
                     </div>
                     <div class="float-right">
-                      <p class="mb-0 text-right">Employees</p>
+                      <p class="mb-0 text-right">Total Club Members</p>
                       <div class="fluid-container">
                         <h3 class="font-weight-medium text-right mb-0">246</h3>
                       </div>
                     </div>
                   </div>
-                  <p class="text-muted mt-3 mb-0">
-                    <i class="mdi mdi-reload mr-1" aria-hidden="true"></i> Product-wise sales
+                  <p class="text-muted mt-3 mb-0 text-center">
+                    <i class="mdi mdi-bookmark-outline mr-1" aria-hidden="true"></i> 20 added this week
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 grid-margin stretch-card">
+              <div class="card card-statistics">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <i class="mdi mdi-receipt text-warning icon-lg"></i>
+                    </div>
+                    <div class="float-right">
+                      <p class="mb-0 text-right">Events Organized</p>
+                      <div class="fluid-container">
+                        <h3 class="font-weight-medium text-right mb-0">3</h3>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="text-muted mt-3 mb-0 text-center">
+                    <i class="mdi mdi-poll mr-1" aria-hidden="true"></i> ₹5.2k funds raised this month
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 grid-margin stretch-card">
+              <div class="card card-statistics">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <i class="mdi mdi-map-marker text-success icon-lg"></i>
+                    </div>
+                    <div class="float-right">
+                      <p class="mb-0 text-right">Lost & Found</p>
+                      <div class="fluid-container">
+                        <h3 class="font-weight-medium text-right mb-0">5</h3>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="text-muted mt-3 mb-0 text-center">
+                    <i class="mdi mdi-calendar mr-1" aria-hidden="true"></i> 20 helpful posts this month
                   </p>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-7 grid-margin stretch-card">
+            <div class="col-lg-12 grid-margin stretch-card">
               <!--weather card-->
               <div class="card card-weather">
                 <div class="card-body">
                   <div class="weather-date-location">
-                    <h3>Monday</h3>
+                    <h3 class="date2bday"><%= forecast.forecastday[0].date %></h3>
                     <p class="text-gray">
-                      <span class="weather-date">25 October, 2016</span>
-                      <span class="weather-location">London, UK</span>
+                      <span class="weather-date time2date"><%= location.localtime %></span><br>
+                      <span class="weather-location"><%= location.name %></span>
                     </p>
                   </div>
                   <div class="weather-data d-flex">
                     <div class="mr-auto">
-                      <h4 class="display-3">21
+                      <h4 class="display-3"><%= forecast.forecastday[0].day.avgtemp_c %>
                         <span class="symbol">&deg;</span>C</h4>
                       <p>
-                        Mostly Cloudy
+                        <%= forecast.forecastday[0].day.condition.text %>
                       </p>
                     </div>
                   </div>
@@ -218,117 +218,58 @@
                 <div class="card-body p-0">
                   <div class="d-flex weakly-weather">
                     <div class="weakly-weather-item">
+                      <p class="mb-0 date2day"><%= forecast.forecastday[0].date %></p>
+                      <img src="<%= forecast.forecastday[0].day.condition.icon %>">
                       <p class="mb-0">
-                        Sun
-                      </p>
-                      <i class="mdi mdi-weather-cloudy"></i>
-                      <p class="mb-0">
-                        30°
+                        <%= forecast.forecastday[0].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Mon
-                      </p>
-                      <i class="mdi mdi-weather-hail"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[1].date %></p>
+                      <img src="<%= forecast.forecastday[1].day.condition.icon %>">
                       <p class="mb-0">
-                        31°
+                        <%= forecast.forecastday[1].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Tue
-                      </p>
-                      <i class="mdi mdi-weather-partlycloudy"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[2].date %></p>
+                      <img src="<%= forecast.forecastday[2].day.condition.icon %>">
                       <p class="mb-0">
-                        28°
+                        <%= forecast.forecastday[2].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Wed
-                      </p>
-                      <i class="mdi mdi-weather-pouring"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[3].date %></p>
+                      <img src="<%= forecast.forecastday[3].day.condition.icon %>">
                       <p class="mb-0">
-                        30°
+                        <%= forecast.forecastday[3].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Thu
-                      </p>
-                      <i class="mdi mdi-weather-pouring"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[4].date %></p>
+                      <img src="<%= forecast.forecastday[4].day.condition.icon %>">
                       <p class="mb-0">
-                        29°
+                        <%= forecast.forecastday[4].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Fri
-                      </p>
-                      <i class="mdi mdi-weather-snowy-rainy"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[5].date %></p>
+                      <img src="<%= forecast.forecastday[5].day.condition.icon %>">
                       <p class="mb-0">
-                        31°
+                        <%= forecast.forecastday[5].day.avgtemp_c %>°
                       </p>
                     </div>
                     <div class="weakly-weather-item">
-                      <p class="mb-1">
-                        Sat
-                      </p>
-                      <i class="mdi mdi-weather-snowy"></i>
+                      <p class="mb-0 date2day"><%= forecast.forecastday[6].date %></p>
+                      <img src="<%= forecast.forecastday[6].day.condition.icon %>">
                       <p class="mb-0">
-                        32°
+                        <%= forecast.forecastday[6].day.avgtemp_c %>°
                       </p>
                     </div>
                   </div>
                 </div>
               </div>
               <!--weather card ends-->
-            </div>
-            <div class="col-lg-5 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <h2 class="card-title text-primary mb-5">Performance History</h2>
-                  <div class="wrapper d-flex justify-content-between">
-                    <div class="side-left">
-                      <p class="mb-2">The best performance</p>
-                      <p class="display-3 mb-4 font-weight-light">+45.2%</p>
-                    </div>
-                    <div class="side-right">
-                      <small class="text-muted">2017</small>
-                    </div>
-                  </div>
-                  <div class="wrapper d-flex justify-content-between">
-                    <div class="side-left">
-                      <p class="mb-2">Worst performance</p>
-                      <p class="display-3 mb-5 font-weight-light">-35.3%</p>
-                    </div>
-                    <div class="side-right">
-                      <small class="text-muted">2015</small>
-                    </div>
-                  </div>
-                  <div class="wrapper">
-                    <div class="d-flex justify-content-between">
-                      <p class="mb-2">Sales</p>
-                      <p class="mb-2 text-primary">88%</p>
-                    </div>
-                    <div class="progress">
-                      <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" role="progressbar" style="width: 88%" aria-valuenow="88"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                  <div class="wrapper mt-4">
-                    <div class="d-flex justify-content-between">
-                      <p class="mb-2">Visits</p>
-                      <p class="mb-2 text-success">56%</p>
-                    </div>
-                    <div class="progress">
-                      <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" style="width: 56%" aria-valuenow="56"
-                        aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -350,6 +291,28 @@
   <!-- container-scroller -->
 
   <!-- plugins:js -->
+  <script>
+	var bdays = ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'];
+	var days = ['Sun','Mon','Tue','Wed','Thur','Fri','Sat'];
+	var months = ['January','February','March','April','May','June','July','August','September','October','November','December'];
+	let dates=document.querySelectorAll(".date2day");
+	for (i=0;i<dates.length;i++)
+	{
+		dates[i].innerHTML=days[new Date(dates[i].innerHTML.replace(/(\d{2})-(\d{2})-(\d{4})/, "$2/$1/$3")).getDay()];
+	}
+	let bdates=document.querySelectorAll(".date2bday");
+	for (i=0;i<bdates.length;i++)
+	{
+		bdates[i].innerHTML=bdays[new Date(bdates[i].innerHTML.replace(/(\d{2})-(\d{2})-(\d{4})/, "$2/$1/$3")).getDay()];
+	}
+	let tdates=document.querySelectorAll(".time2date");
+	for (i=0;i<tdates.length;i++)
+	{
+		let tmp=tdates[i].innerHTML.split(" ");
+		let date=new Date(tmp[0].replace(/(\d{2})-(\d{2})-(\d{4})/, "$2/$1/$3"));
+		tdates[i].innerHTML=date.getDate()+" "+months[date.getMonth()]+" "+date.getFullYear()+" "+tmp[1];
+	}
+  </script>
   <script src="assets/js/vendor.bundle.js"></script>
   <script src="assets/js/vendor.bundle.addons.js"></script>
   <script src="assets/js/misc.js"></script>
